--- a/index.html
+++ b/index.html
@@ -8,8 +8,61 @@
   <title>Homepage</title>
 </head>
 <body>
-
+  <div class="container">
+    <div id="menu">
+      <h1>PIZZA MENU</h1>
+      <h2>Please create your glorious pizza by selecting from the choices below!</h2>
+      <form id="createPizza">
+        <select class="form-control" id="pizzaSize">
+          <option value="small">Small</option>
+          <option value="medium">Medium</option>
+          <option value="large">Large</option>
+        </select>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="toppings" value="cheese" id="cheese">
+          <label class="form-check-label" for="cheese">
+            Cheese
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="toppings" value="pepperoni" id="pepperoni">
+          <label class="form-check-label" for="pepperoni">
+            Pepperoni
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="toppings" value="olives" id="olives">
+          <label class="form-check-label" for="olives">
+            Olives
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="toppings" value="mushrooms" id="mushrooms">
+          <label class="form-check-label" for="mushrooms">
+            Mushrooms
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="toppings" value="pineapple" id="pineapple">
+          <label class="form-check-label" for="pineapple">
+            Pineapple
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="toppings" value="bacon" id="bacon">
+          <label class="form-check-label" for="bacon">
+            Bacon
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="toppings" value="peppers" id="peppers">
+          <label class="form-check-label" for="peppers">
+            Bell Peppers
+          </label>
+        </div>
+        <button type="submit" class="btn btn-dark" id="submit">Order your pizza!</button>
+      </form>
+    </div>
+  </div>
 </body>
 </html>
-
-
