add display for price

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
         <button type="submit" class="btn btn-dark" id="submit">Order your pizza!</button>
       </form>
     </div>
+    <p>Your pizza will come to a total of: </p>
+    <p id="priceDisplay"></p>
+    <p> dollars! We hope you enjoy!</p>
   </div>
 </body>
 </html>
