add return to menu button

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       <p>Your pizza will come to a total of: </p>
       <p id="priceDisplay"></p>
       <p> dollars! We hope you enjoy!</p>
+      <button type="button" class="btn btn-dark" id="return">Return to Menu</button>
     </div>
   </div>
 </body>
